--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "hamepage": "http://AndriyLidych.github.io/react21",
+  "hamepage": "http://AndriyLidych.github.io/reacthw21",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
